perf(nop-rg): plan 2267 Phase 1 基线重建——基准场景矩阵化 + javadoc 修复
- CorpusUtil 生成器命中词/密度参数化（旧签名逐字节等价委托，场景间以独立 corpus 目录防复用污染）
- VectorCompareBenchmark 场景矩阵（6B/16B/32B × 稀疏/密集 @Param）
- CoordinatorEndToEndBenchmark 加 scenario/strategy @Param（LITERAL vs VECTOR 对比、long-32B corpus）
- SearchCoordinator.java:35-38 类 javadoc 按 live 行为重写（FoldingByteSearcher 失效 link、VECTOR 抛异常陈旧表述），移除失效 import
- 基线与热点数据落 plan 2267 记录表；噪音事件与共测配对协议修订如实记录